--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 body{
   width: 100%;
   height: 100vh;
-  background-color: rgb(37, 37, 37);
+  background-color:#FAFAFA;
 }
 
 .estilo{
@@ -14,4 +14,10 @@ body{
   height: 50%;
   display: flex;
   flex-wrap: wrap;
+}
+
+
+.borde{
+  border: 1px solid #00000078;
+    box-shadow: 2px 2px 5px 1px red;
 }
